--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .ipynb_checkpoints/
 Wiktionary/datadir/
 Storage/
+AcademicCloud/
 
 .python-version
 *.pt
@@ -10,7 +11,6 @@ Storage/
 *.model
 *.xml
 hfdownloader
-
 
 # Created by https://www.toptal.com/developers/gitignore/api/pycharm,jupyternotebooks
 # Edit at https://www.toptal.com/developers/gitignore?templates=pycharm,jupyternotebooks
